# PyGame

./: README.md  main.py  pyproject.toml
.github/workflows/: lint.yml
src/runner/: assets.py  background.py  coin.py  constants.py  game.py  obstacle.py  player.py  session.py  sound.py  spawn.py  ui.py
src/runner/managers/: base_manager.py  coin_manager.py  obstacle_manager.py
